--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^4.0.5",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
