--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "firebase": "^9.8.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.1.0",
+    "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
