--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
+    "react-modern-drawer": "^1.1.1",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-star-picker": "^2.0.12",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
